Remove SVM dependency to jdk.unsupported